--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,64 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%sveltekit.head%
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+
+<head>
+	<meta charset="utf-8" />
+	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+	<link rel="stylesheet" href="global.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<style>
+		@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap");
+
+		html,
+		body {
+			margin: 0;
+			padding: 0;
+			font-family: "Roboto", sans-serif;
+			font-size: 16px;
+			line-height: 1.5;
+		}
+
+		* {
+			box-sizing: border-box;
+			margin: 0;
+			padding: 0;
+		}
+
+		.roboto-light {
+			font-family: "Roboto", sans-serif;
+			font-weight: 300;
+			font-style: normal;
+		}
+
+		.roboto-regular {
+			font-family: "Roboto", sans-serif;
+			font-weight: 400;
+			font-style: normal;
+		}
+
+		.roboto-medium {
+			font-family: "Roboto", sans-serif;
+			font-weight: 500;
+			font-style: normal;
+		}
+
+		.roboto-bold {
+			font-family: "Roboto", sans-serif;
+			font-weight: 700;
+			font-style: normal;
+		}
+
+		.roboto-black {
+			font-family: "Roboto", sans-serif;
+			font-weight: 900;
+			font-style: normal;
+		}
+	</style>
+	%sveltekit.head%
+</head>
+
+<body data-sveltekit-preload-data="hover">
+	<div style="display: contents">%sveltekit.body%</div>
+</body>
+
 </html>
