--- a/src/app.html
+++ b/src/app.html
@@ -56,7 +56,7 @@
 	%sveltekit.head%
 </head>
 
-<body data-sveltekit-preload-data="hover">
+<body data-sveltekit-preload-data="hover" class="antialiased">
 	<div style="display: contents">%sveltekit.body%</div>
 </body>
 
